simplifying the markup for the module title style - should fix the IE issue with text being misaligned

--- a/fe-scaffold/app/scss/partials/_reset.scss
+++ b/fe-scaffold/app/scss/partials/_reset.scss
@@ -36,7 +36,7 @@ body {
 }
 
 article,aside,details,figcaption,figure,
-footer,header,hgroup,menu,nav,section {
+footer,header,main,menu,nav,section {
     display:block;
 }
 
